fixed spacing issues

--- a/src/css/CreateEvent.css
+++ b/src/css/CreateEvent.css
@@ -40,12 +40,6 @@
   font-size: 16px;
 }
 
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .attendance {
   display: flex; 
   gap: 10px; 
@@ -54,7 +48,7 @@
 .attendance label {
   font-size: 16px;
 }
-.buttons {
+.button {
   display: flex;
   gap: 10px;
 }
