--- a/src/css/SearchEvents.css
+++ b/src/css/SearchEvents.css
@@ -31,6 +31,7 @@
   display: flex;
   align-items: center;
   margin-top: 10px;
+  gap: 5px;
 }
 
 .search-input {
@@ -39,38 +40,53 @@
   max-width: 300px;
   font-size: 16px;
   border-radius: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid grey;
   margin-right: 10px;
-}
-
-.filter-icon {
-  background: none;
-  font-size: 16px;
-  cursor: pointer;
-  border:none;
 }
 
 .filter-dropdown-container {
   position: relative;
   display: inline-block;
+  margin-left: 10px;
 }
 
 /* Hide the dropdown by default */
 .filter-dropdown {
   display: none; 
   position: absolute;
-  top: 40px; /* Adjust dropdown position below the icon */
+  top: 10px;
   left: 0;
   background: white;
   border-radius: 4px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 10;
-  width: 150px; /* Adjust width as needed */
+  width: 120px; 
+}
+
+.filter-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+.filter-dropdown select {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  background-color: white; 
+  color: black; 
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 /* Show dropdown on hover of container */
 .filter-dropdown-container:hover .filter-dropdown {
-  display: block; /* Show dropdown */
+  display: block; 
 }
 
 /* Events Grid */
@@ -91,7 +107,7 @@
   justify-content: center;
   align-items: center;
   height: 200px;
-  border: 1px solid #ccc;
+  border: 1px solid grey;
 }
 
 .event-card h3 {
@@ -110,7 +126,7 @@
   right: 20px;  
   padding: 10px 20px;
   font-size: 18px;
-  background-color: #000;
+  background-color: black;
   color: white;
   border-radius: 5px;
   cursor: pointer;
