--- a/src/css/global.css
+++ b/src/css/global.css
@@ -45,7 +45,7 @@ input, textarea, select {
 }
 
 /* Button Styles */
-.button {
+.button, .sign-up button{
   background-color: black;
   color: white;
   border: none;
@@ -73,6 +73,21 @@ input, select, textarea {
 input:focus, select:focus, textarea:focus {
   border-color: var(--primary-color);
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.5);
+}
+
+.dropdown {
+  display: none;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 150px;
+  border: 1px solid var(--text-color);
+  border-radius: 4px;
+  background: #fff;
+}
+
+.dropdown:hover {
+  display: block;
 }
 
 /* Media Queries */
